--- a/app/src/main/res/layout/activity_technicien_client_accueil.xml
+++ b/app/src/main/res/layout/activity_technicien_client_accueil.xml
@@ -8,92 +8,58 @@
     android:background="@color/white"
     tools:context=".TechnicienClientAccueilActivity"
     >
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:id="@+id/toolbar"
-        android:elevation="4dp"
-        android:background="@color/bleu_foncer"
-        >
-        <TextView
-            android:id="@+id/welcomeTextView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="@color/orange"
-            android:text="Bienvenue à vous sur TechServices !"
-            android:padding="5dp"
-            android:layout_centerHorizontal="true" />
 
-    </androidx.appcompat.widget.Toolbar>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="@drawable/round_header_blue">
+
+
+        <ImageView
+            android:id="@+id/logoImageView"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/logorose"
+            />
+
+
+    </RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/fond10"
+
         >
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/logoImageView"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginLeft="90dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo" />
-
-            <TextView
-                android:id="@+id/welcomeTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/logoImageView"
-                android:background="@color/orange"
-                android:padding="10dp"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
 
             <ImageView
                 android:id="@+id/ImageBVN2023"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:padding="80dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/bvn2023" />
+                android:src="@drawable/bvn11" />
+
+            <TextView
+                android:id="@+id/redirection"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="150dp"
+                android:text="Commencer"
+                android:textColor="@color/bleu"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:background="@color/bleu"
-                android:padding="15dp">
-
-                <Button
-                    android:id="@+id/loginButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/welcomeTextView"
-                    android:layout_centerHorizontal="true"
-                    android:background="@drawable/div_round_bleu"
-                    android:text="Espace Technicien"
-                    android:layout_margin="5dp"
-                    android:textColor="@android:color/black" />
-
-                <Button
-                    android:id="@+id/createAccountButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Espace Client"
-                    android:layout_margin="5dp"
-                    android:textColor="@android:color/black"
-                    android:background="@drawable/div_round_orange"
-                    android:layout_below="@id/loginButton"
-                    android:layout_centerHorizontal="true" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
