--- a/app/src/main/res/layout/activity_connexion_client.xml
+++ b/app/src/main/res/layout/activity_connexion_client.xml
@@ -130,6 +130,7 @@
         android:textColor="@color/tsorange"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
