--- a/app/src/main/res/layout/activity_dashboard_client.xml
+++ b/app/src/main/res/layout/activity_dashboard_client.xml
@@ -57,12 +57,11 @@
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="430dp"
+        android:layout_height="85dp"
         android:background="@color/tsblue"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/depanDashboard"
@@ -194,21 +193,22 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/todo"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:srcCompat="@drawable/baseline_home_2"
-        android:contentDescription="@string/todo" />
+        app:srcCompat="@drawable/baseline_home_2" />
 
     <ImageView
         android:id="@+id/btnProjet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:srcCompat="@drawable/baseline_dashboard_24"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/baseline_dashboard_24" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -216,10 +216,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="TODO"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:srcCompat="@drawable/baseline_person"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/baseline_person" />
 
     <ImageView
         android:id="@+id/notifProfil"
