--- a/app/src/main/res/layout/activity_details_devis_client.xml
+++ b/app/src/main/res/layout/activity_details_devis_client.xml
@@ -70,12 +70,11 @@
     <View
         android:id="@+id/view3"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="430dp"
+        android:layout_height="85dp"
         android:background="@color/tsblue"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/homeDashboard"
@@ -83,6 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
         app:srcCompat="@drawable/baseline_home_2" />
@@ -92,11 +92,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/todo2"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:srcCompat="@drawable/baseline_dashboard_24"
-        android:contentDescription="@string/todo2" />
+        app:srcCompat="@drawable/baseline_dashboard_24" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -104,10 +105,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:contentDescription="@string/todo1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view3"
-        app:srcCompat="@drawable/baseline_person"
-        android:contentDescription="@string/todo1" />
+        app:srcCompat="@drawable/baseline_person" />
 
     <TableLayout
         android:id="@+id/table_devis"
